index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 <body>
 
   <nav>
-    <a href="index.html">첫 번째 페이지</a>
-    <a href="second.html">두 번째 페이지</a>
+    <a href="https://watering.netlify.app">신규매수</a>
+    <a href="https://watering2.netlify.app">목표평단가</a>
   </nav>
 
   <h1>물타기 계산기</h1>
