--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
     nav {
       background-color: #333;
       padding: 10px;
-      display: flex;
-      justify-content: center;
+      display: inline-block;
       border: 3px solid #ffcc00;
       margin-top: 10px;
       box-shadow: 1px 1px 0 #000, -1px -1px 0 #555; /* 도트 스타일 */
@@ -124,6 +123,8 @@
       }
     }
   </style>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6357245829250444"
+  crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -244,3 +245,5 @@
     // 페이지 로드 시 초기 계산
     window.onload = updateResults;
   </script>
+  </body>
+  </html>
