--- a/index.html
+++ b/index.html
@@ -245,5 +245,16 @@
     // 페이지 로드 시 초기 계산
     window.onload = updateResults;
   </script>
+    <div>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-1234567890123456"
+           data-ad-slot="9876543210"
+           data-ad-format="auto"></ins>
+      <script>
+           (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+  </div>
   </body>
   </html>
