--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="keeGQDNcoie__C47xFCjqrIDlgOKVdGQXSMzDytepq4" />
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6357245829250444"
+  crossorigin="anonymous"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>물타기 계산기 - 도트 스타일</title>
@@ -123,8 +126,7 @@
       }
     }
   </style>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6357245829250444"
-  crossorigin="anonymous"></script>
+
 </head>
 <body>
 
